FEAT: enhance UserController tests and update 403 OpenAPI response descriptions